# polyfem_application

./: CMakeLists.txt  CMakeLists2.txt  LICENSE.txt  PolyFEMApplication.py  polyfem_application.cpp  polyfem_application.h  polyfem_application.sublime-workspace
custom_cmake_modules/: FindQhull.cmake
custom_geometries/: polygon.h
custom_python/: add_custom_utilities_to_python.cpp  add_custom_utilities_to_python.h  polyfem_python_application.cpp
custom_quadrature/: polygon_gauss_legendre_integration_points.h  polygon_integration_rules.cpp
custom_utilities/: poly_half_edge.h  polyfem_utility.h  polytree_2d.cpp  polytree_2d.h  polytree_sync_utility.h  polytree_utility.h
python_scripts/: polytree_refinement_utility.py
tests/: test_polyedge_1.py  test_polygon.py  test_polytree_util.py  test_polytree_util_2.py  test_polytree_util_3.py  test_polyvertex.py
